--- a/OSI Layer/Network Layer/1. Tống quan lớp mạng.md
+++ b/OSI Layer/Network Layer/1. Tống quan lớp mạng.md
@@ -45,6 +45,14 @@ gửi đầu tiên cắt bản tin thành các gói tin, mỗi gói mang số th
     * Mỗi bộ định tuyến đồng thời xây dựng một cơ sở dữ liệu tôpô bao gồm tất cả các LSA đến từ liên mạng.
     * Tính toán đường đi ngắn nhất bằng giải thuật (SPF) 
     * Bộ định tuyến liệt kê các đường đi tốt nhất và các cổng tới mạng đích trong bảng định tuyến.
+  * Truyền lan về sự thay đổi topo: Khi có sự thay đổi về tôpô, mỗi bộ định tuyến thực hiện các công việc sau:
+    * Lưu vết hàng xóm, gồm tên, trạng thái hoạt động, và giá của liên kết tới hàng xóm.
+    * Xây dựng một gói LSA liệt kê tên của các bộ định tuyến hàng xóm và các giá liên kết, gồm các hàng xóm mới, các thay đổi trong giá liên kết, và liên kết tới các hàng xóm đã chuyển sang trạng thái không hoạt động.
+    * Gửi gói LSA để tất cả các bộ định tuyến khác đều nhận được.
+    * Khi nhận được gói LSA, ghi lại gói trong cơ sở dữ liệu.
+    * Hoàn thành một bản đồ của liên mạng bằng cách sử dụng dữ liệu của các gói LSA được tích luỹ, và sau đó tính toán tuyến tới tất cả các mạng khác sử dụng giải thuật SPF.
+
+  
 
 
 
