--- a/OSI Layer/Network Layer/2. Giao thức IP.md
+++ b/OSI Layer/Network Layer/2. Giao thức IP.md
@@ -64,7 +64,7 @@ Có 1 mạng gồm 5 máy tính, một mạng gồm 3 máy và mạng còn lại
 ![Imgur](https://i.imgur.com/93MSODZ.png)
 
 * Bước 1: Ta chia lần lượt theo mạng có số lượng máy tính nhiều nhất đến mạng có ít máy nhất. Đầu tiên là đối với mạng có 5 máy. Áp dụng công thức (2^m - 2 >= số trạm) ta tính được với mạng 5 máy tính và 1 cổng router thì cần 3 bit host (vì 2^3 - 2>= 6) 
-    => Cần mượn 32 - 24 - 3 = 5 bit phía HostID để sử dụng làm NetID ta được các mạng: 192.168.1.0/29 ( sử dụng để làm địa chỉ cho mạng 5 máy) lần lượt là 192.168.1.1; 192.168.1.2; 192.168.1.3; 192.168.1.4; 192.168.1.5; 192.168.1.6  (subnetmask là 255.255.255.248)
+ >   => Cần mượn 32 - 24 - 3 = 5 bit phía HostID để sử dụng làm NetID ta được các mạng: 192.168.1.0/29 ( sử dụng để làm địa chỉ cho mạng 5 máy) lần lượt là 192.168.1.1; 192.168.1.2; 192.168.1.3; 192.168.1.4; 192.168.1.5; 192.168.1.6  (subnetmask là 255.255.255.248)
     
 ![Imgur](https://i.imgur.com/1cYZXUL.png)
 
