--- a/OSI Layer/Network Layer/2. Giao thức IP.md
+++ b/OSI Layer/Network Layer/2. Giao thức IP.md
@@ -68,12 +68,22 @@ Có 1 mạng gồm 5 máy tính, một mạng gồm 3 máy và mạng còn lại
     
 ![Imgur](https://i.imgur.com/1cYZXUL.png)
 
-192.168.1.8/29 ( Thực hiện chia tiếp để gán cho mạng 3 máy và 1 cổng router)
-192.168.1.16/29 (Các mạng còn lại dùng để dự phòng trong trường hợp sau khi chia hết các mạng trên mà vẫn chưa đủ địa chỉ để gán cho các trạm)
-192.168.1.24/29
-………………….
-192.168.1.248/29
-( /29 là do 24 bit ban đầu cộng thêm 5 bit mượn )
+192.168.1.8/29 ( Thực hiện chia tiếp để gán cho mạng 3 máy và 1 cổng router) <br/>
+192.168.1.16/29 (Các mạng còn lại dùng để dự phòng trong trường hợp sau khi chia hết các mạng trên mà vẫn chưa đủ địa chỉ để gán cho các trạm)<br/>
+192.168.1.24/29<br/>
+………………….<br/>
+192.168.1.248/29 ( /29 là do 24 bit ban đầu cộng thêm 5 bit mượn ) <br/>
+
+![Imgur](https://i.imgur.com/DNr3z5s.png)
+
+* Bước 2: Tiếp theo ta chia đến mạng có 3 máy sử dụng địa chỉ 192.168.1.16/29. Áp dụng công thức (2^m - 2 >= số trạm) ta tính được với mạng 3 máy tính và 1 cổng router thì cần 3 bit host (vì 2^3 - 2>= 4) <br/> 
+=> cần mượn 32 - 29 - 3 = 0 bit phía HostID để sử dụng làm NetID. Vì số bít cần mượn bằng 0 nên ta sử dụng luôn dải địa chỉ này để cấp cho cổng router và mạng 3 máy với các địa chỉ lần lượt (192.168.1.9 ; 192.168.1.10 ; 192.168.1.11 ; 192.168.1.12 với subnetmask 255.255.255.248)
+
+* Bước 3: Sử dụng địa chỉ 192.168.1.16/29 để chia cho mạng 3 máy. Áp dụng công thức (2^m - 2 >= số trạm) ta tính được với mạng 2 máy tính và 1 cổng router thì cần 3 bit host (vì 2^3 - 2>= 3) <br/>
+=> Cần mượn 32 - 29 - 3 = 0 bit phía HostID để sử dụng làm NetID ta được các địa chỉ mạng 192.168.1.16/29 sử dụng để đặt địa chỉ cho cổng router và 2 máy lần lượt là 192.168.1.17 ; 192.168.1.18 ; 192.168.1.19 với subnetmask 255.255.255.248.
+
+
+
 
 
 
