--- a/OSI Layer/Network Layer/3. Giao thức OSPF.md
+++ b/OSI Layer/Network Layer/3. Giao thức OSPF.md
@@ -31,6 +31,101 @@
     Ví dụ: 2 Router R1 R2 muốn trở thành quan hệ 2 chiều, R2 phải thấy bản thân nó trong bản tin Hello của R1. Ngoài ra, trong trạng thái này các Router cũng phải xác dịnh DR, BDR. <br/>
     Các Router muốn trở thành lân cận với các Router khác thì chúng phải qua các trạng thái tiếp theo, và chỉ khi chúng trở thành lân cận của nhau thì chúng mới trao đổi các gói tin DBD. Bước đầu tiên để đến được trạng thái gần kề hoàn toàn là trạng thái ExStart. <br/>
 
+![Imgur](https://i.imgur.com/1gbd3D3.png)
+
+* Trạng thái ExStart: Là trạng thái mà 2 router sử dụng gói Hello để đàm phán xem ai là “chủ” ai là “tớ”, tức là quyết định xem router nào sẽ được đồng bộ cơ sở dữ liệu trước. Router nào có số hiệu OSPF cao hơn sẽ thành chủ.
+
+![Imgur](https://i.imgur.com/Qie5exH.png)
+
+* Trạng thái Exchange: Ở trạng thái này các router hàng xóm sử dụng các gói DBD để gửi cho nhau thông tin trạng thái liên kết (các router miêu tả cơ sở dữ liệu trạng thái liên kết cho nhau). Nếu router nhận được thông tin liên kết không có trong cơ sở dữ liệu nó sẽ yêu cầu một cập nhật đầy đủ. Thông tin định tuyến đầy đủ được trao đổi trong trạng thái Loading.
+
+![Imgur](https://i.imgur.com/8KoIrUI.png)
+
+* Trạng thái Loading: Router sử dụng gói LSR để yêu cầu thông tin hoàn chỉnh của trạng thái liên kết. Khi Router nhận được LSR nó sẽ trả lời bằng một cập nhật định tuyến sử dụng gói LSU. Sau khi đã nhận được gói LSU router sẽ sử dụng gói LSAck để xác nhận trạng thái liên kết.
+
+![Imgur](https://i.imgur.com/FVt2FdA.png)
+
+* Trạng thái Full Adjacency: Đây là trạng thái mà lúc này các router đã thiết lập mối quan hệ hàng xóm hoàn chỉnh hoàn chỉnh.
+
+# 4. Giao thức Hello.
+* Khi bắt đầu một tiến trình OSPF trên một giao diện, Router sẽ gửi đi một gói tin Hello đầu tiên và sau đó đều đặn gửi với khoảng thời gian mặc định là 10 giây. Gói tin Hello có định dạng gồm phần tiêu đề OSPF và tiêu đề Hello.
+
+![Imgur](https://i.imgur.com/djf9GDj.png)
+
+## a) Tiêu đề đề OSPF.
+
+![Imgur](https://i.imgur.com/UJ5vGwK.png)
+
+* Version: Định nghĩa các phiên bản của OSPF.
+* Type: Định nghĩa các loại gói ( ở phần 2 ).
+* Packet Length: Định nghĩa chiều dài tổng của gói kể cả phần tiêu đề.
+* Router ID: Định nghĩa địa chỉ IP của router gửi gói.
+* Area ID: là trường định nghĩa vùng hoạt động của OSPF
+* Checksum: Chứa mã kiểm tra lỗi cho toàn bộ gói trừ hai phần Authentication type là Authentication data.
+* Authentication type:Định nghĩa phương pháp chứng thực được sử dụng trong Area.
+* Authentication data:Định nghĩa giá trị thực của dữ liệu chứng thực.
+
+## b) Tiêu đề gói Hello.
+
+![Imgur](https://i.imgur.com/ClIjrB2.png)
+
+* Network mask:Định nghĩa mặt nạ của mạng.
+* Hello Interval: Định nghĩa khoảng thời gian gửi đi gói Hello.
+* Dead Interval: Định nghĩa khoảng thời gian để xác định được router còn hoạt động trong OSPF hay không.
+* All 0: Gồm 6 bit toàn bộ là 0
+* Cờ E: Gồm 1 bit, khi cờ này được bật tức là vùng hoạt động OSPF là vùng chỉ có 1 kết nối tới vùng đường trục.
+* Cờ T: Gồm 1 bit, khi cờ này được bật tức là router hỗ trợ nhiều metric.
+* Router Priority:Dùng để xác định DR và DBR.
+* Designated Router Address: Trường 32 bit này là địa chỉ IP của DR.
+* Backup Designated Router Address: Trường 32 bit này là địa chỉ của DBR.
+* Neighbor Address:Chứa danh sách hàng xóm hiện thời của router.
+
+# 5. Cẩu hình OSPF.
+> Mô hình: Các ip từ 192.168.11.0 đến 192.168.16.0 chia cho 6 mạng.
+
+![Imgur](https://i.imgur.com/2qZrY01.png)
+
+* Gán IP cho PC: Click vào PC muốn gán IP => Chọn IP Configuration => Điền IP <br/>
+	Tương tự cho các PC còn lại.
+ 
+ ![Imgur](https://i.imgur.com/PUgh6vL.png)
+ 
+ ![Imgur](https://i.imgur.com/VjPyTMa.png)
+ 
+ * Gán địa chỉ IP cho Router: Click vào Router chọn CLI
+
+![Imgur](https://i.imgur.com/wzMgxhc.png)
+
+* Chạy các lệnh: <br/>
+'''
+enable
+config terminel
+interface f 0/1
+ip address 192.168.14.1 255.255.255.0
+no shutdown
+exit
+write 
+'''
+<br/>
+Tương tự cho các Router còn lại.
+
+* Cấu hình OSPF cho các Router: <br/>
+'''
+enable
+conf t
+router ospf 100
+network 192.168.14.0 0.0.0.255 area 0
+exit
+'''
+<br/>
+Dùng lệnh show ip route để kiểm tra <br/>
+
+![Imgur](https://i.imgur.com/cX424uy.png)
+
+
+
+
+
 
 
 
