--- a/1. Tổng quan mô hình OSI.md
+++ b/1. Tổng quan mô hình OSI.md
@@ -1,1 +1,82 @@
+# I. Mô hình OSI.
+## 1. Giới thiệu mô hình OSI.
+* Mô hình OSI (Open Systems Interconnection Reference Model) tạm dịch là Mô hình tham chiếu kết nối các hệ thống mở, giải thích cách dữ liệu truyền từ máy này qua máy khác bằng 7 lớp.
+## 2. Hoạt động của mô hình OSI.
+* Ở tầng 7 ( tầng Application ), dữ liệu được đưa vào máy tính, sau đó được chuyển xuống tầng 6 ( tầng Presentation ) để chuẩn hóa dữ liệu thành một dạng chung để mã hóa và nén dữ liệu. Dữ liệu tiếp tục chuyển xuống tầng 5 ( tầng Session ) để bổ sung thông tin cần cho phiên, tiếp tục gửi dữ liệu xuống tầng 4 ( tầng Transport ).
+* Toàn bộ gói tin của lớp 7, 6, 5 được tầng 4 coi là một Data và được gắn thêm TCP header hoặc UDP header thành một phần. Phần này gọi là một Segments và được chuyển xuống tầng 3 ( tầng Network ).
+* Tầng 3 gắn thêm một IP header vào Segments tạo thành một Packet và được chuyển xuống tầng 2 ( tầng Datalink ).
+* Tầng 2 gắn Ethernet header vào Packet tạo thành Frames. Ngoài ra tầng 2 còn gắn thêm phần kiểm tra lỗi FCS và chuyển xuống tấng 1 ( tầng Physical ).
+* Dữ liêu được chuyển thành một dòng Bit để truyền trên môi trường vật lý. 
+* Ở phía đầu thu, quá trình ngược lại theo các bước trên. Dòng Bit được đưa lên tầng 1 của phía đầu thu, chuyển lên tầng 2 và được gỡ bỏ lớp Frames=> chuyển lên tầng 3 và gỡ lớp Packet => lên tầng 4 gỡ lớp Segments, tiếp tục lần lượt chuyển lên tầng trên.
+
+# II. Mô hình TCP/IP.
+* TCP/IP ( Transmission Control Protocol / Internet Protocol ) là một tập hợp các giao thức trao đổi thông tin được sử dụng để truyền tải và kết nối các thiết bị trong mạng. Nó chỉ rõ  cách đóng gói thông tin, gửi và nhận giữa các máy tính được kết nối với nhau. Được chia thành 4 tầng.
+* 3 tầng application, presentasion, session của mô hình OSI được gom thành một tầng application của mô hình TCP/IP.
+* Tầng transport được giữ nguyên.
+* Tầng network được đổi tên thành tầng internet.
+* 2 tầng data link và physical được gom thành tầng network access.
+
+![Imgur](https://i.imgur.com/sppSBdb.png)
+
+* Tầng Application: Có nhiệm vụ tương tác trực tiếp với tiến trình ứng dụng, cung cấp giao diện giữa người dùng và ứng dụng. Vì không có tầng nào giữa tầng ứng dụng và tầng giao vận như mô hình OSI nên đôi khi tầng ứng dụng của TCP/IP bao gồm các chức năng của tầng phiên, tầng trình diễn bên mô hình OSI.
+* Tầng Transport: Có chức năng xử lý các vấn đề trong quá trình giao tiếp của các máy chủ. Các máy chủ này có thể trong cùng 1 mạng hoặc khác mạng. Nếu khác mạng, các máy chủ sẽ được kết nối thông qua bộ định tuyến. Có 2 giao thức ở tầng này: 
+  * TCP: Đảm báo các gói tin đến đúng nơi, cho phép hai máy tính duy trì liên lạc liên tục để đảm bảo rằng dữ liệu được gửi ở tốc độ chấp nhận được và mọi dữ liệu bị mất đều được gửi lại. 
+  * UDP: Được sử dụng trong các tình huống mà tốc độ quan trọng hơn (ví dụ: phát trực tuyến video).  
+* Tầng Internet:
+  * Có nhiệm vụ:
+    * Định tuyến: tìm tuyến đường qua các nút trung gian để gửi dữ liệu từ nguồn tới đích.
+    * Chuyển tiếp: chuyển tiếp gói tin từ cổng nguồn tới cổng đích theo tuyến đường.
+    * Định danh các nút mạng.
+    * Nhận dữ liệu từ giao thức, chèn thêm header chứa thông tin của tầng mạng và chuyển đến tầng tiếp theo.
+    * Đảm bảo thông số phù hợp của đường truyền theo từng dịch vụ.
+  * Các giao thức chính:
+    * IP (Internet Protocol): Đánh địa chỉ IP và định tuyến dữ liệu.
+    * ICMP (Internet Control Message Protocol): Cung cấp khả năng thông báo lỗi.
+    * ARP (Address Resolution Protocol): Xác định địa chỉ MAC
+    * RARP (Reverse Address Resolution Protocol): Xác định IP tương ứng với MAC.
+* Tầng Network Access: Nhận dữ liệu dưới dạng bit sau đó đưa dữ liệu vào trong 1 gói dữ liệu rồi gửi lên mạng lưới máy tính để truyền đến điểm đích.
+  * Chịu trách nhiệm truyền dữ liệu giữa các thiết bị trong cùng một mạng. 
+  * Gồm các giao thức chỉ hoạt động trên một liên kết – thành phần mạng kết nối các nút hoặc máy chủ trong mạng. Tầng này chịu trách nhiệm truyền dữ liệu giữa hai thiết bị trong cùng một mạng.
+  * Các gói tin sẽ được đưa vào khung và được đưa đến đích được định sẵn ban đầu.
+
+<br/>
+  - Cách hoạt động: Khi truyền dữ liệu , quá trình tiến hành từ tầng trên xuống tầng dưới, qua mỗi tầng dữ liệu được thêm vào thông tin điều khiển gọi là Header tùy vào từng tầng. Khi nhận dữ liệu thì quá trình xảy ra ngược lại, dữ liệu được truyền từ tầng dưới lên và qua mỗi tầng thì phần Header tương ứng sẽ được lấy đi và khi đến tầng trên cùng thì dữ liệu không còn phần Header nữa.
+
+![Imgur](https://i.imgur.com/qGpW3Wb.png)
+
+# III. So sánh 2 mô hình.
+## 1. Sự giống nhau.
+* Đều là mô hình logic được xây dựng dựa trên các lớp. 
+ * Đều có tầng giao vận và tầng mạng.
+* Cùng sử dụng kỹ thuật truyền packet.
+* Đơn giản hóa quá trình khắc phục sự cố bằng cách chia nhỏ chức năng phức tạp thành các thành phần đơn giản hơn.
+## 2. Sự khác nhau.
+
+|Nội dung|OSI|TCP/IP|
+|-|-|-|
+|Số tầng|7|4|
+|PP tiếp cận|Theo chiều dọc|Theo chiều ngang|
+|Tính phụ thuộc|Độc lập|Phụ thuộc theo giao thức|
+|Phát triển|Mô hình trước, giao thức sau.|Giao thức trước, mô hình sao.|
+|Hỗ trợ truyền thông|Hỗ trợ cả không dây và kết nối định tuyến|Hỗ trợ truyền thông không kết nối từ tầng mạng|
+|Độ tin cậy và phổ biến|Được nhiều người cho rằng chỉ là mô hình tham khảo và đã cũ nên hạn chế sử dụng|Được chuẩn hóa, nhiều người tin cậy và sử dụng phổ biến|
+|Sự kết hợp giữa các tầng|Mỗi tầng khác nhau sẽ thực hiện một nhiệm vụ khác nhau, không có sự kết hợp giữa bất cứ tầng nào|Trong tầng ứng dụng có tầng trình diễn và tầng phiên được kết hợp với nhau|
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
