--- a/3. VLAN.md
+++ b/3. VLAN.md
@@ -1,1 +1,102 @@
+# 1. Tổng quan VLAN.
+*  VLAN là viết tắt của Virtual LAN ( mạng LAN ảo ). Theo nguyên tắc thiết kế hệ thống mạng thì tất cả các máy tính của các phòng ban sẽ kết nối vào một Switch, các Switch sẽ kết nối vào một Router, từ đó đi ra ngoài Internet. Nhưng doanh nghiệp có thể chỉ cần mua một Switch rồi chia thành nhiều VLAN ( mỗi VLAN có thể coi là một Switch ảo độc lập nhau ), mỗi phòng ban tương ứng với mỗi VLAN trên Switch vật lý.
+* Lợi ích của ảo hóa là giúp tận dụng triệt để phần cứng của thiết bị. Ví dụ phòng kế toán chỉ có 2 máy thì sẽ không có Switch nào chỉ có 2 port ( chỉ có loại 4 - 8 - 20 - 24 port ), nhưng với VLAN có thể tạo ra các Switch ảo với số port tùy ý.
+
+![Imgur](https://i.imgur.com/sWakIN0.png)
+
+![Imgur](https://i.imgur.com/nazjZQM.png)
+
+* Mỗi VLAN được coi là một Broadcast Domain. Một PC gửi lưu lượng Broadcast thì lưu lượng Broadcast này sẽ lan truyền ra tất cả các port thuộc VLAN của nó.
+
+![Imgur](https://i.imgur.com/hjdFPM0.png)
+
+# 2. Phân loại VLAN.
+## a) Port - based VLAN.
+* Là VLAN dựa trên cổng hoặc giao diện, đây là cách cấu hình VLAN đơn giản và phổ biến nhất. Cấu hình này cho phép quản trị viên mạng gắn VLAN theo cách thủ công, mỗi cổng Switch được gắn vào một VLAN xác định.
+* Port - based VLAN thích hợp với hệ thống mạng có quy mô nhỏ và không phải thường xuyên thay đổi hạ tầng.
+## b) MAC address based VLAN
+* Là VLAN dựa trên địa chỉ MAC, đề cập đến việc gắn các VLAN theo địa chỉ MAC - mỗi địa chỉ MAC được đánh dấu với một VLAN. Cách cấu hình này không được sử dụng nhiều do còn nhiều hạn chế trong việc quản lý.
+* Tuy nhiên, cấu hình này có ưu điểm là cải thiện đáng kể tính linh hoạt và an ninh mạng. Kể cả khi người dùng thay đổi vị trí thường xuyên, thì quản trị mạng cũng không cần cấu hình lại các VLAN.
+## c) Protocol - based VLAN
+* Cách cấu hình này tương tự như MAC address based VLAN, nhưng chỉ dùng duy nhất một địa chỉ IP hoặc địa chỉ logic thay thế cho địa chỉ MAC. Hiện nay, cách cấu hình này đã không còn quá thông dụng nhờ sử dụng giao thức DHCP. 
+
+# 3. Ưu, nhược điểm của VLAN.
+## a) Ưu điểm
+* Thông qua cách giới hạn miền quảng bá, các trạm cuối trên một VLAN bị chặn không cho nghe hay nhận các chương trình phát sóng không dành cho nó. Thêm nữa, nếu một Router không được kết nối với VLAN, các trạm cuối của một VLAN sẽ không trao đổi/giao tiếp với trạm cuối của các VLAN khác. Với việc giới hạn các miền quảng bá trên mạng giúp giảm đáng kể lưu lượng truy cập.
+* Các giới hạn ảo do VLAN thiết lập chỉ có thể vượt qua được bởi các Router. Bởi vậy, quyền truy cập vào VLAN bị hạn chế thông qua việc áp dụng các biện pháp bảo mật dựa trên thiết bị định tuyến tiêu chuẩn. Ngoài ra, VLAN có thể tăng cường bảo mật bằng cách lọc gói tin. Quản trị viên mạng kiểm soát từng cổng và bất kỳ tài nguyên nào mà họ cho phép được dùng, phân tách các nhóm có dữ liệu nhạy cảm khỏi phần còn lại của mạng và hạn chế nguy cơ bị lộ thông tin mật.
+* LAN giúp cải thiện hiệu quả mạng tổng thể bằng cách tạo nhóm các thiết bị giao tiếp thường xuyên nhất. VLAN cung cấp bảo mật cho các mạng lớn thông qua việc cấp quyền kiểm soát thiết bị lớn hơn. Các tổ chức lớn thường tạo VLAN với mục đích kiểm soát lưu lượng cao để phân vùng lại các thiết bị. <br/>
+Túm lại: VLAN giúp giảm lưu lượng truy cập, tăng khả năng về bảo mật và chất lượng mạng
+
+## b) Nhược điểm.
+* Gói tin có thể bị rò rỉ giữa các VLAN.
+* Để xử lý được khối công việc trong hệ thống mạng lớn, cần có thiết bị định tuyến mạnh.
+* Một VLAN không thể chuyển tiếp lưu lượng mạng tới những VLAN khác.
+* Khả năng tương tác là một rào cản lớn.
+* Các mối đe dọa trong hệ thống đơn lẻ có thể phát tán virus khắp hệ thống mạng.
+* Cấu hình VLAN phải phụ thuộc nhiều vào nhà sản xuất thiết bị mạng do tiêu chuẩn chính thức  IEEE 802.1q chưa được phê duyệt.
+
+# 4. Ứng dụng và lợi ích của VLAN.
+* Tiết kiệm băng thông của hệ thống mạng: VLAN chia mạng cục bộ (LAN) thành nhiều phân đoạn (segment) mạng nhỏ. Khi có gói tin quảng bá (broadcast), nó sẽ truyền trong VLAN tương ứng. Do đó, việc phân đoạn VLAN giúp tối ưu băng thông của hệ thống mạng.
+* Tăng khả năng bảo mật: Các thiết bị ở các VLAN khác nhau sẽ không thể kết nối với nhau (trừ khi trang bị Router nối giữa các VLAN). Ví dụ máy tính ở mạng VLAN kế toán không thể kết nối với các máy tính ở VLAN kỹ sư. Điều này giúp tăng cường bảo mật dữ liệu hiệu quả hơn. 
+* Tính linh động cao: VLAN có thể dễ dàng di chuyển các thiết bị. VLAN có thể được cấu hình tĩnh hoặc động. Trong cấu hình tĩnh, người quản trị mạng sẽ cấu hình cho từng cổng của mỗi Switch. Tiếp đó, gán vào một VLAN bất kỳ. Với cấu hình động, mỗi cổng của Switch có thể tự cấu hình cho VLAN thông qua địa chỉ MAC được thiết bị kết nối vào.
+* Dễ dàng thêm / bớt máy tính vào VLAN: Chỉ cần cấu hình cổng máy tính vào VLAN mong muốn là có thể thêm máy tính vào VLAN. Mạng VLAN thường được ứng dụng nhiều cho các công ty có quy mô lớn với lượng truy cập Internet khủng trong cùng lúc. Với những máy tính có dung lượng lớn, nhiều người truy cập vào cùng lúc, sử dụng VLAN giúp giảm tải, chia đều người dùng Internet để họ có có thể truy cập mạng nhanh chóng hơn.
+
+* 5. Khi nào sử dụng VLAN.
+* Hệ thống máy tính chạy trong mạng LAN đạt hơn 200 thiết bị.
+* Bên trong mạng LAN, lưu lượng quảng bá của người dùng đạt đến ngưỡng quá lớn.
+* Hệ thống máy tính kết nối chậm do có quá nhiều tin quảng bá.
+* Nhóm làm việc ở trên cùng một miền phát sóng và chạy chung một ứng dụng.
+* Người dùng có nhu cầu nâng cao tính bảo mật dữ liệu trong quá trình làm việc nhóm.
+* Người dùng có nhu cầu chuyển đổi bộ chuyển mạch đơn thành nhiều bộ chuyển mạch ảo.
+
+# 6. Cấu hình VLAN trên Cisco Switch.
+* Truy cập và xem VLAN đang có
+```
+Switch>enable
+Switch#show vlan
+```
+![Imgur](https://i.imgur.com/3aPx23g.png)
+
+* Tạo VLAN và đặt tên
+```
+Switch#conf t
+Switch(config) #vlan 2
+Switch(config-vlan) #name vlan002
+```
+![Imgur](https://i.imgur.com/t50znwd.png)
+
+* Trên các thiết bị Switch hỗ trợ từ vlan 0 đến vlan 4095, nhưng 2 vlan đầu và cuối dùng để dự phòng, vlan 1 thường được sử dụng để quản lý vì vậy không nên sử dụng id này cho các VLAN mới.
+* Gán port cho VLAN
+```
+Switch(config) #int fa0/1
+Switch(config-if) #switchport mode access
+Switch(config-if) #switchport access vlan 2
+```
+<br/>
+>Lưu ý: 
+>> Mode access dành cho port kết nối với PC 
+>> Gán một dải port cho VLAN: `interface range fa 0/1-2, fa 0/5`
+
+* Xóa VLAN: Ở chế độ config: `Switch(config) # no vlan 2`   hoặc  `Switch(config) #no vlan 2-5, 9`  để xóa một dải
+	Các port thuộc VLAN bị xóa sẽ không thuộc VLAN nào nữa. Nếu tạo lại VLAN vừa bị xóa thì các port sẽ tự quay lại VLAN
+  
+*  Xem VLAN của một interface: `Switch#show interface fa 0/1 switchport`
+
+![Imgur](https://i.imgur.com/ONFUpvP.png)
+
+* Xóa thông tin VLAN và cấu hình của Switch
+```
+	Swict#delete vlan.dat  
+  hoặc  
+  Swict#delete flash:vlan.dat
+	Swict#erase startup-config
+	Swict#reload
+```
+![Imgur](https://i.imgur.com/37aUQGy.png)
+  
+
+
+
+
+
 
