--- a/3. VLAN.md
+++ b/3. VLAN.md
@@ -41,7 +41,7 @@ Túm lại: VLAN giúp giảm lưu lượng truy cập, tăng khả năng về b
 * Tính linh động cao: VLAN có thể dễ dàng di chuyển các thiết bị. VLAN có thể được cấu hình tĩnh hoặc động. Trong cấu hình tĩnh, người quản trị mạng sẽ cấu hình cho từng cổng của mỗi Switch. Tiếp đó, gán vào một VLAN bất kỳ. Với cấu hình động, mỗi cổng của Switch có thể tự cấu hình cho VLAN thông qua địa chỉ MAC được thiết bị kết nối vào.
 * Dễ dàng thêm / bớt máy tính vào VLAN: Chỉ cần cấu hình cổng máy tính vào VLAN mong muốn là có thể thêm máy tính vào VLAN. Mạng VLAN thường được ứng dụng nhiều cho các công ty có quy mô lớn với lượng truy cập Internet khủng trong cùng lúc. Với những máy tính có dung lượng lớn, nhiều người truy cập vào cùng lúc, sử dụng VLAN giúp giảm tải, chia đều người dùng Internet để họ có có thể truy cập mạng nhanh chóng hơn.
 
-* 5. Khi nào sử dụng VLAN.
+# 5. Khi nào sử dụng VLAN.
 * Hệ thống máy tính chạy trong mạng LAN đạt hơn 200 thiết bị.
 * Bên trong mạng LAN, lưu lượng quảng bá của người dùng đạt đến ngưỡng quá lớn.
 * Hệ thống máy tính kết nối chậm do có quá nhiều tin quảng bá.
@@ -88,7 +88,7 @@ Switch(config-if) #switchport access vlan 2
 ```
 	Swict#delete vlan.dat  
   hoặc  
-  Swict#delete flash:vlan.dat
+  	Swict#delete flash:vlan.dat
 	Swict#erase startup-config
 	Swict#reload
 ```
