--- a/4. Trunk.md
+++ b/4. Trunk.md
@@ -1,1 +1,112 @@
+# 1. Tổng quan về Trunk.
+* Trên thị trường có những Switch có tối đa 48 port, nhưng nếu phòng ban có hơn 48 máy tính thì ta sẽ dùng 2 Switch có 48 port rồi kết nối 2 Switch bằng đường Trunk. Điều này tương đương việc ta có một Switch 96 port.
+
+![Imgur](https://i.imgur.com/gFhhD1M.png)
+
+* Nếu trên cùng tạo VLAN 2, VLAN 3 trên 2 Switch vật lý thì những PC trong cùng 1 VLAN có thể giao tiếp với nhau thông qua đường Trunk.
+
+![Imgur](https://i.imgur.com/wYU8EWG.png)
+
+*  Tình huống trong thực tế của VLAN và Trunk là, ví dụ ta gom các máy tính phòng Sale vào VLAN 2, nếu ta muốn chỉ những nhân viên phòng này mới có thể truy cập tới server CRM ( hình dưới ) để truy vấn dữ liệu thì ta cần gom server này cũng thuộc VLAN 2, tương tự như các máy thuộc VLAN 3.
+* Nếu muốn các PC có thể đi Internet thì cần bổ sung thêm Router, một cổng thuộc VLAN 2 có vai trò là default gateway cho các máy thuộc VLAN 2, tương tự với VLAN 3.
+
+![Imgur](https://i.imgur.com/JRTWhjA.png)
+
+*  Kỹ thuật Trunking cũng giúp ta tiết kiệm port trên Switch và tiết kiệm số lượng kết nối cần triển khai giữa 2 Switch. <br/>
+   Nếu muốn các PC cùng VLAN có thể giao tiếp với nhau trong cùng VLAN thì cần kết nối một sợi dây giữa các VLAN của Switch. Khi đó ta cần 6 port và 3 sợi dây.
+
+![Imgur](https://i.imgur.com/OV4Ducp.png)
+<br/>
+Với trunking ta chỉ cần 2 port và 1 sợi dây
+
+![Imgur](https://i.imgur.com/OgPU37s.png)
+
+* Trước khi Switch nhận dữ liệu từ PC gửi tới, nó sẽ gán nhãn thông tin VLAN mà PC thuộc về trước khi gửi dữ liệu trên đường Trunk.
+
+![Imgur](https://i.imgur.com/geDdR26.png)
+<br/>
+  Khi Switch 2 nhận được frame với nhãn thông tin VL1, nó sẽ biết frame thuộc VLAN nào và trước khi gửi frame tới PCB nó sẽ gỡ bỏ nhãn VLAN.
+  
+ ![Imgur](https://i.imgur.com/J4wBagd.png)
+ 
+ # 2. Cấu hình Trunk trên Cisco Switch.
+ * Ở chế độ config
+ ```
+	    Switch(config)# interface fa 0/1  ( xác định port muốn cấu hình trunking ) 
+      Switch(config-if)# switchport trunk encapsulation dot1q
+Hoặc  Switch(config-if)# switchport trunk encapsulation isl
+	( Khai báo kiểu đóng gói dot1q là chuẩn quốc tế, kiểu isl là độc quyền của Cisco )
+      Switch(config-if)# switchport mode trunk
+      Switch(config-if)# exit
+```
+* Với kiểu dot1q, ta có khái niệm native vlan. Nó quy định VLAN 1 là native vlan. Khi switch nhận dữ liệu từ vlan 1,do vlan 1 mặc định là native vlan nên nó sẽ không gán nhãn vlan nào, khi switch 2 nhận được nó sẽ tự hiểu  frame này thuộc native vlan, native vlan của switch 2 vẫn là vlan 1 nên nó vẫn đấy frame này cho những thiết bị thuộc vlan 1 
+
+![Imgur](https://i.imgur.com/Ddy5PuI.png)
+
+* Native vlan còn dùng để tương thích với những thiết bị không hỗ trợ trunking. Ví dụ Sw2 không hỗ trợ cấu hình, không thể tạo vlan và đường trunk trên switch thì tất cả các port của Sw2 đang thuộc vlan 1 
+
+![Imgur](https://i.imgur.com/yHZB6kb.png)
+
+Vô hiệu hóa native vlan: `Switch(config)#vlan dot1q tag native` <br/>
+	Khi đó vlan 1 cũng phải gán nhãn thông tin vlan 1 trước khi gửi qua switch láng giềng và ở switch 2 cũng phải tắt native vlan
+
+* Đường trunk cho lưu lượng của tất cả vlan được gửi qua đường trunk <br/>
+	`Switch(config-if)#switchport trunk allow vlan all`
+<br/>
+Nếu vào port kết nối trunk từ Sw1 tới Sw2 chạy lệnh: `Switch(config-if)#switchport trunk allow vlan 1-2` thì khi đó nó chỉ cho phép lưu lượng của vlan 1 và vlan 2 được gửi qua đường trunk và vlan 3 không được gửi qua đường trunk ( khi đó PC E không thể giao tiếp được với PC F ) 
+
+# 3. Hiệu chỉnh Native VLAN trên đường Trunk sử dụng kiểu đóng gói dot1q.
+* Với đường trunk sử dụng kiểu đóng gói dot1q thì mặc định native vlan là vlan 1, để hiệu chỉnh lại native vlan: <br/>
+	Vào interface và dùng lệnh: `Switch(config-if)# switchport trunk native vlan 2` <br/>
+  Khi đó cũng cần khai báo native vlan của switch khác cũng là 2
+  
+  ![Imgur](https://i.imgur.com/37x0UK7.png)
+  
+* Access port vào vlan dùng native vlan
+```
+	Switch(config)#int fa 0/1
+	Switch(config-if)#switchport trunk encapsulation dot1q
+	Switch(config-if)#switchport mode trunk 
+	Switch(config-if)#switchport trunk native vlan 2
+```
+
+# 4. Mở rộng VLAN khi thiếu port trên Switch.
+* Khi muốn thêm port thuộc vlan 2 nhưng Sw2 không còn port nào nữa thì ta có thể thêm một Switch và thiết lập trunk giữa 2 thiết bị, rồi thiết lập các port thuộc vlan 2, tương tự với vlan 3.
+
+![Imgur](https://i.imgur.com/f1xRIpC.png)
+
+* Trường hợp Sw3 không hỗ trợ tạo vlan hay cấu hình trunk, nếu trên interface nối với Sw3 của Sw2 cấu hình access vào vlan 2 thì tất cả các port của Sw3 thuộc vlan 2.
+* Trên interface của Sw2 hướng tới Sw3 mà ta cấu hình trunk thì tất cả các port của Sw3 sẽ thuộc thành viên vlan 1 ( kiểu đóng gói dot1q )
+
+# 5. Giao thức DTP tự động thiết lập kết nối Trunk giữa các Switch.
+* DTP ( Dynamic Trunking Protocol ) là giao thức độc quyền của Cisco và được kích hoạt mặc định trên thiết bị của hãng. 
+* Trường hợp khi dùng lệnh show int trunk ta sẽ thất kết quả là mode desirable hoặc auto 
+
+![Imgur](https://i.imgur.com/XF35wAX.png)
+
+* Mặc định một số dòng Switch ( ở layer 3 ) tất cả các interface được thiết lập ở mode desirable. Các dòng Switch còn lại ( layer 2 ) các port được thiết lập ở chế độ auto. 
+* Một port ở chế độ desirable sẽ định kỳ gửi bản tin DTP để thiết lập đường trunk với thiết bị Switch khác. Còn port ở chế độ auto thì không định kỳ gửi bản tin DTP nhưng khi nó nhận được bản tin DTP từ thiết bị láng giềng thì nó sẽ hồi đáp bản tin DTP này và kết nối giữa 2 Switch sẽ là đường trunk. <br/>
+	 Nếu 2 port đều ở chế độ desirable thì cả 2 bên đều định kỳ gửi bản tin DTP và kết nối trunk thành công <br/>
+	 Nếu 2 port đều ở chế độ auto, không bên nào chủ động gửi bản tin DTP thì kết nối giữa 2 Switch sẽ là mode access
+
+![Imgur](https://i.imgur.com/oeP8nqa.png)
+
+* Tắt giao thức DTP, vào interface:
+		`Switch(config-if)#switchport nonegotiate` <br/>
+	   ( Trên nhưng interface thiết lập ở mode access kết nối với PC thì nên tắt DTP )
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
