--- a/5. VTP.md
+++ b/5. VTP.md
@@ -1,1 +1,60 @@
+# 1. Lý thuyết về VTP
+* VTP (VLAN Trunking Protocol ) là giao thức được hỗ trợ trên các thiết bị của hãng. Khi triển khai VTP sẽ đảm bảo database vlan giữa các Switch sẽ đồng bộ hóa với nhau để tránh các lỗi có thể phát sinh.
+*	Ví dụ: Để 2 PC có thể giao tiếp được với nhau thì Sw1 cũng phải tạo VLAN 2. Nếu Sw1 không thể tạo VLAN 2 thì 2 PC không thể giao tiếp với nhau, khi đó ta cần giao thức VTP. Ta chỉ cần vào Sw1 tạo vlan 2, giao thức VTP sẽ “dạy” thông tin vlan 2 cho các thiết bị Switch láng giềng mà không cần tạo thủ công. Nhưng để thiết lập port nào thuộc vlan 2 thì vẫn phải vào Switch để cấu hình 
+
+![Imgur](https://i.imgur.com/iIap1Tl.png)
+
+* Điều kiện để các Switch có thể học thông tin của nhau là: Phải kết nối với nhau bằng đường trunk và cùng tham gia vào cùng một VTP domain ( vào các Switch chạy lệnh Switch(config)#vtp domain VnPro )
+
+![Imgur](https://i.imgur.com/unOfBP2.png)
+
+* Khi các Switch cùng tham gia vào vtp domain thì ta có thể thiết lập Switch hoạt động ở chế độ Server hoặc Client hoặc Transparent 
+  * Switch hoạt động ở chế độ Server có khả năng tạo vlan và đặt tên cho vlan, sau khi tạo xong thì nó sẽ lan truyền thông tin vlan cho các Switch láng giềng biết 	
+	* Switch láng giềng ở chế độ Client thì sẽ có khả năng học thông tin vlan từ Switch Server và tiếp tục truyền thông tin vlan cho Switch láng giềng khác 
+	* Switch hoạt động ở chế độ Transparent không học thông tin vlan từ Switch láng giềng nên nó sẽ cho phép tạo thông tin vlan nhưng khi tạo xong nó sẽ không dạy thông tin vlan cho các Switch láng giềng khác
+
+![Imgur](https://i.imgur.com/uJWYHYT.png)
+
+* Sw Server có thể dạy thông tin cho Sw Client và Sw Client có thể học thông tin vlan từ Sw Server gửi tới và tiếp tục lan truyền thông tin vlan cho Sw Client khác và nó cũng dạy thông tin vlan cho Sw Server khác. <br/>
+	  Sw Server cũng có thể học thông tin vlan từ Sw Server khác 
+
+![Imgur](https://i.imgur.com/YsIDUz8.png)
+
+* Để kiểm tra database trên các switch đồng bộ với nhau hay chưa, dùng lệnh:  `Switch#show vtp status`  <br/>
+		Nếu chỉ số Configuration Revision bằng nhau thì đã đồng bộ.
+    
+ ![Imgur](https://i.imgur.com/ss60XXN.png)
+ 
+ * - Lệnh  Switch(config)#vtp password hoangkien : Chỉ các Swicth cùng vtp domain và cùng password thì mới có thể học thông tin vlan của nhau. 
+	 Xem password: Switch#show vtp password  
+	Nếu các switch vẫn không thể học thông tin của nhau thì có thể do khác vtp version 
+
+
+* Quá trình đồng bộ hóa vlan:  Ở switch server, sau khi tạo vlan 10 nó sẽ truyền thông tin vlan 10 cho thiết bị client và học được thông tin vlan 10. Switch server gửi thông tin vlan định kỳ 5 phút một lần.
+  * Switch client cần kiểm tra thông tin vlan đó là mới hay cũ so với database vlan của nó dựa vào chỉ số Revision number. Nếu chỉ số của bản tin của nó bằng của bản tin VTP từ Switch láng giềng gửi tới thì nó sẽ biết không cần đồng bộ hóa vlan nữa
+  * Chỉ số Revision mặc định của Switch là 0, có độ dài 32 bit. Bất kỳ thao tác nào của vlan cũng làm tăng chỉ số của vlan ( ví dụ như tạo vlan, xóa vlan )
+
+# 2. Cấu hình VTP.
+- Sơ đồ mạng: 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
