--- a/5. VTP.md
+++ b/5. VTP.md
@@ -37,6 +37,32 @@
 # 2. Cấu hình VTP.
 - Sơ đồ mạng: 
 
+![Imgur](https://i.imgur.com/a3DPkJI.png)
+<br/>
+Trên SW1: VLAN 10 (Fa0/2 – Fa0/4), VLAN 20 (Fa0/5 – Fa0/7), VLAN 30 (Fa0/8 – Fa0/10)  <br/>
+Trên SW2: VLAN 10 (Fa0/4 – Fa0/6), VLAN 20 (Fa0/7 – Fa0/9), VLAN 30 (Fa0/10 – Fa0/12)
+
+- Bước 1: Tạo vlan 10, vlan 20, vlan 30 và gán port cho các vlan ở 2 Switch như trên.
+- Bước 2: Nối đường trunk giữa 2 Switch.
+- Bước 3: Đặt chế độ và domain cho 2 switch.
+<br/>
+Sw1: <br/>
+`Switch(config)#vtp domain HOANGKIEN`
+
+![Img](https://i.imgur.com/VNcZPLk.png)
+
+`Switch(config)#vtp mode server`
+<br/> 
+Sw2: <br/>
+Đặt domain giống SW1: `Switch(config)#vtp domain HOANGKIEN`  <br/>
+`Switch(config)#vtp mode client `
+
+![Imgur](https://i.imgur.com/pPCinci.png)
+
+- Bước 4: Kiểm tra:  `Switch#show vtp status` 
+
+
+
 
 
 
