--- a/6. Inter VLAN.md
+++ b/6. Inter VLAN.md
@@ -40,12 +40,14 @@ Mỗi 1 vlan sẽ kết nối riêng 1 đường với Router
 		Router(config-subif)#ip address 181.12.10.10 255.255.255.0
 		Router(config-subif)#no shutdown 
 
-    Router(config)#int gigabitEthernet 0/0.20
-    Router(config-subif)#encapsulation dot1Q 20		Router(config-subif)#ip address 181.12.20.10 255.255.255.0
+  		Router(config)#int gigabitEthernet 0/0.20
+   	 	Router(config-subif)#encapsulation dot1Q 20		
+   		Router(config-subif)#ip address 181.12.20.10 255.255.255.0
 		Router(config-subif)#no shutdown
     
-    Router(config)#int gigabitEthernet 0/0.30
-    Router(config-subif)#encapsulation dot1Q 30		Router(config-subif)#ip address 181.12.30.10 255.255.255.0
+   		Router(config)#int gigabitEthernet 0/0.30
+   		Router(config-subif)#encapsulation dot1Q 30		
+		Router(config-subif)#ip address 181.12.30.10 255.255.255.0
 		Router(config-subif)#no shutdown
 ```
 - Cấu hình trunk tại cổng fa0/1 của switch
