p1. Cấu hình cơ bản.md

--- a/Basic Config Router/1. Cấu hình cơ bản.md
+++ b/Basic Config Router/1. Cấu hình cơ bản.md
@@ -1,1 +1,2 @@
-
+- Trước khi các máy tính trong mạng nội bộ có thể truy cập ra ngoài internet thì ta cần cấu hình địa chỉ IP trên các cổng giao tiếp và cấu hình định tuyến trên Router. <br/>
+[Imgur](https://i.imgur.com/Qb4ANBD.png)
