Update 1. Cấu hình cơ bản.md

--- a/Basic Config Router/1. Cấu hình cơ bản.md
+++ b/Basic Config Router/1. Cấu hình cơ bản.md
@@ -1,3 +1,19 @@
 - Trước khi các máy tính trong mạng nội bộ có thể truy cập ra ngoài internet thì ta cần cấu hình địa chỉ IP trên các cổng giao tiếp và cấu hình định tuyến trên Router. <br/>
 
 ![Imgur](https://i.imgur.com/Qb4ANBD.png)
+
+-  Để cấu hình được Router ta cần có một máy tính và sợi cable console. Trên máy tính, sử dụng SecureCRT hoặc Putty để cấu hình.
+
+![Imgur](https://i.imgur.com/lPKZ5qg.png)
+
+- Trước khi cấu hình, dùng một đầu cable điều khiển gắn vào cổng COM của máy tính, đầu còn lại là đầu RJ45 gắn vào cổng Console của thiết bị. Sau đó nhấn nút nguồn chờ 2 phút thiết bị sẽ khổi động thành công.
+
+![Imgur](https://i.imgur.com/rgDj6Rk.png)
+
+- Một số dòng máy tính không có cổng COM thì ta cần dùng cable chuyển đổi USB sang COM, sau khi cài driver cho cable này thì có thể xác định được cổng COM là bao nhiêu.
+
+![Imgur](https://i.imgur.com/cRoKYnp.png)
+
+- Khi xác định được port COM trên máy tính, ta dùng putty, chọn Serial (COM4 ) => chọn Open sẽ hiển thị giao diện dòng lệnh của thiệt bị.
+
+![Imgur](https://i.imgur.com/yp6sTcv.png)
