--- a/Basic Config Router/2. Khảo sát các chế độ dòng lệnh của thiết bị.md
+++ b/Basic Config Router/2. Khảo sát các chế độ dòng lệnh của thiết bị.md
@@ -2,5 +2,20 @@
 - Hệ thống dòng lệnh của Cisco Router được tổ chức theo cấu trúc phân cấp 
 	+ User EXEC Mode: ``` Router>``` 
 	+ Privileged EXEC Mode: ```Router#```
-		Ở 2 chế độ này thì ta chỉ có thể show cấu hình thiết bị. Để cấu hình ta vào chế độ:
+	<br/>	Ở 2 chế độ này thì ta chỉ có thể show cấu hình thiết bị. Để cấu hình ta vào chế độ:
 	+ Global Configure Mode: ```Router(config)#```
+
+![Igmur](https://i.imgur.com/6Wh452q.png)
+
+# 2. Các mode.
+- Từ chế độ User mà muốn vào chế độ đặc quyền, dùng lệnh: ```Router>enable```
+- Để vào chế độ config để cấu hình: ```Router#configure teminal```
+
+![Imgur](https://i.imgur.com/nQsYkQf.png)
+
+- Sau khi khởi động thiết bị, chọn option là no để tự cấu hình. Sau đó enter để vào chế độ đầu tiên.
+
+![Imgur](https://i.imgur.com/zh5C5wi.png)
+
+- Lưu thông tin cấu hình: ```Router#write memory```
+- Kiểm tra thông tin cấu hình được lưu: ```Router#show startup-config```
