--- a/Basic Config Router/3. Thiết lập mật khẩu Console và mật khẩu Enable.md
+++ b/Basic Config Router/3. Thiết lập mật khẩu Console và mật khẩu Enable.md
@@ -8,7 +8,7 @@ Router(config)#line console 0
 Router(config-line)#password hoangkien 
 Router(config-line)#login
 ```
-- Xóa mật khẩu: ```Router(config-line)#no password```
+- Xóa mật khẩu console: ```Router(config-line)#no password```
 
 
 - Tạo mật khẩu enable ( Ở chế độ config ): 
