--- a/Basic Config Router/5. Khai báo địa chỉ IP trên các cổng giao tiếp của thiết bị.md
+++ b/Basic Config Router/5. Khai báo địa chỉ IP trên các cổng giao tiếp của thiết bị.md
@@ -3,7 +3,7 @@
 ![Imgur](https://i.imgur.com/0TGW9OE.png)
 
 
-- Xác định số cổng giao tiếp của Router: Router#show ip interface brief
+- Xác định số cổng giao tiếp của Router: ```Router#show ip interface brief```
 
 - Đặt IP cho cổng:
 ```
@@ -14,7 +14,7 @@
 ```
 
 - Kiểm tra lại cổng:
-- ```
+```
 Router#show ip interface brief
 Interface IP-Address OK? Method Status Protocol
 GigabitEthernet0/0/0 192.168.1.1 YES manual up down
@@ -31,7 +31,7 @@ Gỡ bỏ cấu hình ( vào lại cổng ): ```Router(config-if)#no ip address`
 ![Imgur](https://i.imgur.com/zgAHA5I.png)
 <br/>
   Status up khi no shutdown ở cổng   <br/>
-	Protocol up khi cắm cable trên cổng giao tiếp của thiết bị
+  Protocol up khi cắm cable trên cổng giao tiếp của thiết bị
 
 - Đặt IP động: Router(config-if)#ip address dhcp 
 
