--- a/Basic Config Router/5. Khai báo địa chỉ IP trên các cổng giao tiếp của thiết bị.md
+++ b/Basic Config Router/5. Khai báo địa chỉ IP trên các cổng giao tiếp của thiết bị.md
@@ -33,8 +33,8 @@ Gỡ bỏ cấu hình ( vào lại cổng ): ```Router(config-if)#no ip address`
   Status up khi no shutdown ở cổng   <br/>
   Protocol up khi cắm cable trên cổng giao tiếp của thiết bị
 
-- Đặt IP động: Router(config-if)#ip address dhcp 
-
+- Đặt IP động: ```Router(config-if)#ip address dhcp```
+	
 
 
 
