--- a/Basic Config Router/6. Khai báo địa chỉ IP trên Cisco Switch.md
+++ b/Basic Config Router/6. Khai báo địa chỉ IP trên Cisco Switch.md
@@ -7,5 +7,4 @@
 	Switch(config-if)#no shutdown
 ```
 <br/>
-   Gán default gateway:```Switch(config)#ip default-gateway 192.168.1.1```   
-   ( trỏ về địa chỉ IP của Router ) 
+Gán default gateway: ``` Switch(config)#ip default-gateway 192.168.1.1 ```   ( trỏ về địa chỉ IP của Router ) 
