--- a/Basic Config Router/7. Tính năng chống trôi dòng lệnh Logging Synchronous.md
+++ b/Basic Config Router/7. Tính năng chống trôi dòng lệnh Logging Synchronous.md
@@ -1,6 +1,6 @@
 - Khi gõ lệnh xong mà ở dưới có những thông báo, nếu tắt tính năng Logging Synchronous thì sẽ phải gõ lệnh tiếp theo ngay sau dòng thông báo.
 
-[Imgur](https://i.imgur.com/nFmm6fw.png)
+![Imgur](https://i.imgur.com/nFmm6fw.png)
 
 
 - Tắt tính năng Logging Synchronous: ```Router(config-line)#no logging synchronous```
