--- a/Telnet/1. Kỹ thuật telnet.md
+++ b/Telnet/1. Kỹ thuật telnet.md
@@ -14,8 +14,8 @@ Router(config-line)#login
 <br/>
 Khai báo mật khẩu enable: Router(config)#enable password abc
 <br/>
-- Tại máy tính:
-	```C:\>telnet 192.168.10.11```
+
+- Tại máy tính: ```C:\>telnet 192.168.10.11```
 
 ![Imgur](https://i.imgur.com/3ObTeQa.png)
 
