--- a/Telnet/1. Kỹ thuật telnet.md
+++ b/Telnet/1. Kỹ thuật telnet.md
@@ -38,12 +38,12 @@ Router(config-line)#password hoangkien
 # 3. Cấu hình xác thực bằng Username và Password.
 - Tạo User và Password:
 ```
-	Router(config)#username kien1 password 123
+  Router(config)#username kien1 password 123
   Router(config)#username kien2 password 123
 ```
 - Gỡ bỏ những mật khẩu trước:
 ```
-	Router(config)#line vty 0 4
+  Router(config)#line vty 0 4
   Router(config-line)#no password 
   Router(config-line)#login local
 ```
@@ -58,14 +58,14 @@ Router(config-line)#password hoangkien
 - Để thực hiện telnet từ PC tới router mà không cần đăng nhập mật khẩu ta thực hiện câu lệnh sau : 
 
 ```
-  Router(config)#line vty 0 4
+  	Router(config)#line vty 0 4
 	Router(config-line)#privilege level 15   ( Không cần mật khẩu enable )
 	Router(config-line)#no login                 ( Không cần mật khẩu telnet )
 ```
 - Từ Switch ( có IP ) cũng có thể telnet đến Router. Nếu muốn cấu hình telnet trên Switch thì cũng có thể dùng các câu lệnh như với Router
 
 # 5. Tính năng Configuration Lock chỉ cho phép một người cấu hình thiết bị.
-- Khi bật tính năng Configuration Lock thì chỉ một người đầu tiên có thể vào chế độ config, những người sau không thể vào. Khi người đầu tiên exit chế độ config thì người sau có thể vào.
+- Khi bật tính năng Configuration Lock thì chỉ một người đầu tiên có thể vào chế độ config, những người sau không thể vào. Khi người đầu tiên exit chế độ config thì người sau có thể vào.   <br/>
 	```Router(config)#configuration mode exclusive auto```
 
 
